# Roost

./: .gitignore  LICENSE  README.md  pyproject.toml
src/roost/: cli.py
src/roost/engines/: __init__.py
src/roost/engines/demo/: __init__.py  engine.py
src/roost/runtime/: __init__.py  artifacts.py  config.py  engine.py  models.py  namespacing.py  registry.py  swarm.py  workspaces.py
src/roost/runtime/backends/: __init__.py  redis.py
tests/: test_demo_engine.py  test_runtime_primitives.py
