[project]
name = "roost-runtime"
version = "0.1.0"
description = "A durable runtime for agent step-machines"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Roost contributors" },
]
dependencies = [
  "pydantic>=2.6",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
redis = [
  "redis>=5.0",
  "saq>=0.12",
]
metrics = [
  "prometheus-client>=0.20",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[project.scripts]
roost = "roost.cli:main"

[project.entry-points."roost.engines"]
demo = "roost.engines.demo.engine:build_engine"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roost"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
